--- a/PreAcademicInfoFront/webapp/src/index.html
+++ b/PreAcademicInfoFront/webapp/src/index.html
@@ -8,6 +8,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://checkout.stripe.com/checkout.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAWsxKNXM_r30lYCskW-3qGGFAjRyvGP6w",
+    authDomain: "preacademicinfo.firebaseapp.com",
+    databaseURL: "https://preacademicinfo.firebaseio.com",
+    projectId: "preacademicinfo",
+    storageBucket: "preacademicinfo.appspot.com",
+    messagingSenderId: "673947939108"
+  };
+  firebase.initializeApp(config);
+</script>
 </head>
 <body>
   <app-root></app-root>
