--- a/PreAcademicInfoFront/webapp/src/index.html
+++ b/PreAcademicInfoFront/webapp/src/index.html
@@ -10,6 +10,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://checkout.stripe.com/checkout.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.7.3/firebase.js"></script>
+  
+    <!-- Polyfill(s) for older browsers -->
+
 <script>
   // Initialize Firebase
   var config = {
